add note and fixes

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 </head>
 
 <body>
-    <h1>Microsoft Software Download Listing 🏳️‍🌈</h1>
+    <h1>Microsoft Software Download Listing</h1>
 
-    <a href="https://github.com/gravesoft/msdl">
-        <b>Source code on GitHub</b>
-    </a>
+    <p>Please note, this ISO link is original from Microsoft. Your original license is still required.</p>
 
     <noscript>
         <p>This page requires JavaScript to work.</p>
@@ -71,7 +69,32 @@
         <button onClick="backToProducts();">Go back to the product list</button>
     </div>
 
+    <div class="m-5">
+        <a href="https://github.com/gravesoft/msdl">
+            <b>Source by Gravesoft</b>
+        </a>;
+        <a href="https://github.com/azhe403/msdl">
+            <b>Modified by azhe403</b>
+        </a>
+    </div>
+
+    <div class="m-5">
+        <img
+            src="https://hitscounter.dev/api/hit?url=msdl.azhe.my.id&label=visit+count&icon=bar-chart-fill&color=%23198754&message=&style=flat&tz=UTC">
+    </div>
+
+    <div style="height: 100px;"></div>
+
     <input id="msdl-session-id" type="hidden">
+
+    <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/embed/trbtn.min.js?v=14-05-2025'></script>
+    <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/trbtn-overlay.min.js?v=14-05-2025'></script>
+    <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/trbtn-overlay.min.js?v=14-05-2025'></script>
+    <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/trbtn-overlay.min.js?v=14-05-2025'></script>
+    <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/trbtn-overlay.min.js?v=14-05-2025'></script>
+    <script type='text/javascript'
+        class='troverlay'>(function () { var trbtnId = trbtnOverlay.init('Trakteer bang!', '#be1e2d', 'https://trakteer.id/azhe403/tip/embed/modal', 'https://edge-cdn.trakteer.id/images/embed/trbtn-icon.png?v=14-05-2025', '40', 'floating-left'); trbtnOverlay.draw(trbtnId); })();</script>
+
 </body>
 
 </html>
